--- a/Blackjack.html
+++ b/Blackjack.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Bstyle.css">
+    <link rel="stylesheet" href="./files/Bstyle.css">
     <title>Blackjack</title>
 </head>
 <body>
@@ -27,6 +27,6 @@
         <form id="n"><input id="namer" type="text" placeholder="Enter your name" onblur="rename()"></form>
     </main>
     <div id="money">Money: </div>
-    <script src="Blackjack.js"></script>
+    <script src="./files/Blackjack.js"></script>
 </body>
 </html>
